kubernetes/artemis-consumer-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artemis-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: artemis-consumer
  template:
    metadata:
      labels:
        app: artemis-consumer
    spec:
      containers:
        - name: artemis-consumer
          image: xini/artemis-consumer:2.5
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
