kubernetes/car-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: car-service
spec:
  selector:
    app: car-service
  ports:
    - port: 8080
      name: http
      targetPort: http
