kubernetes/keycloak-service.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  ports:
    - port: 80
      name: http
      targetPort: http
  selector:
    app: keycloak
