kubernetes/postgresql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
spec:
  selector:
    app: postgresql
  clusterIP: "None"
  ports:
    - port: 5432
      name: http
      targetPort: http
