kubernetes/zookeeper-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
spec:
  selector:
    app: zookeeper
  clusterIP: "None"
  ports:
    - port: 2181
      name: http
      targetPort: http
