kubernetes/car-service-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: car-service
spec:
  rules:
    - host: car-service.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: car-service
                port:
                  name: http
